<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
                android:id="@+id/TextViewM"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/autoclave_details"
                android:textStyle="bold"
                android:textSize="24sp" />
    
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_below="@+id/TextViewM"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="5dp"
                android:text="@string/total_volume_"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:layout_toRightOf="@+id/TextView1"
                android:layout_alignBottom="@+id/TextView1"
                android:text="blah"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView1"
                android:layout_alignRight="@+id/TextView1"
                android:layout_below="@+id/TextView1"
                android:layout_marginBottom="5dp"
                android:text="@string/cylinder_"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TextView2"
                android:layout_toRightOf="@+id/TextView2"
                android:text="2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView2"
                android:layout_alignRight="@+id/TextView2"
                android:layout_below="@+id/TextView2"
                android:layout_marginBottom="5dp"
                android:text="@string/head_"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TextView3"
                
                android:layout_toRightOf="@+id/TextView3"
                android:text="3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView2"
                android:layout_alignRight="@+id/TextView2"
                android:layout_below="@+id/TextView3"
                android:layout_marginBottom="5dp"
                android:text="@string/total_static_volume_"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:layout_toRightOf="@+id/TextView4"
                android:layout_alignBottom="@+id/TextView4"
                android:text="4"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView2"
                android:layout_alignRight="@+id/TextView2"
                android:layout_below="@+id/TextView4"
                android:layout_marginBottom="5dp"
                android:text="@string/head_static_volume_"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:layout_toRightOf="@+id/TextView5"
                android:layout_alignBottom="@+id/TextView5"
                android:text="5"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView2"
                android:layout_alignRight="@+id/TextView2"
                android:layout_below="@+id/TextView5"
                android:layout_marginBottom="5dp"
                android:text="@string/dynamic_volume_"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/TextView6"
                android:layout_alignBottom="@+id/TextView6"
                android:text="5"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView2"
                android:layout_alignRight="@+id/TextView2"
                android:layout_below="@+id/TextView7"
                android:layout_marginBottom="5dp"
                android:text="@string/fluid_height_"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TextView7"
                
                android:layout_toRightOf="@+id/TextView7"
                android:text="where is this?"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView2"
                android:layout_alignRight="@+id/TextView2"
                android:layout_below="@+id/TextView6"
                android:layout_marginBottom="5dp"
                android:text="@string/autoclave_length_tan_to_tan_"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TextView8"
                
                android:layout_toRightOf="@+id/TextView8"
                android:text="8"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView2"
                android:layout_alignRight="@+id/TextView2"
                android:layout_below="@+id/TextView8"
                android:layout_marginBottom="5dp"
                android:text="@string/number_of_compartments_"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:layout_toRightOf="@+id/TextView9"
                android:layout_alignBottom="@+id/TextView9"
                android:text="8"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView2"
                android:layout_alignRight="@+id/TextView2"
                android:layout_below="@+id/TextView9"
                android:layout_marginBottom="5dp"
                android:text="@string/autoclave_length_dia_ratio_"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextView010"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TextView10"
                
                android:layout_toRightOf="@+id/TextView10"
                android:text="10"
                android:textSize="20sp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>