<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ryan.autoclave.sizing.MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/input_the_following_" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_marginTop="34dp"
                android:text="@string/design_flowrate_" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignTop="@+id/editText2"
                android:text="@string/retention_time_" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText1"
                android:layout_alignRight="@+id/editText1"
                android:layout_below="@+id/editText1"
                android:ems="5"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText2"
                android:layout_alignRight="@+id/editText2"
                android:layout_below="@+id/editText2"
                android:ems="5"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText2"
                android:text="@string/average_freeboard_" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/textView1"
                android:layout_toRightOf="@+id/editText1"
                android:scrollbars="vertical" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/textView2"
                android:layout_toRightOf="@+id/editText2"
                android:scrollbars="vertical" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/textView3"
                android:layout_toRightOf="@+id/editText3"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/editText3"
                android:layout_toLeftOf="@+id/spinnerh"
                android:text="@string/select_head_type_" />

            <Spinner
                android:id="@+id/spinnerh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText3"
                android:layout_below="@+id/editText3"
                android:ems="10" />

            <TextView
                android:id="@+id/TextView5"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/spinnerh"
                android:layout_toLeftOf="@+id/EditText5"
                android:text="@string/gassing_factor_" />

            <EditText
                android:id="@+id/EditText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/spinnerh"
                android:layout_alignRight="@+id/editText3"
                android:layout_below="@+id/spinnerh"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/spinnerh"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/EditText5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView5"
                android:layout_below="@+id/EditText5"
                android:layout_toLeftOf="@+id/spinner1"
                android:text="@string/inside_diameter_m_" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/spinner2"
                android:layout_marginLeft="11dp"
                android:layout_toRightOf="@+id/textView1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/spinner1"
                android:text="" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/textView7"
                android:onClick="clearFields"
                android:text="Clear fields" />
            
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/buttonC"
                android:onClick="updateLength"
                android:text="@string/get_length" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/button2"
                android:onClick="seeResults"
                android:text="@string/click_for_details" />

            <Button
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/button1"
                android:onClick="openHistory"
                android:text="Open History" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>